update scroll down button

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <link href="vendor/owlcarousel/assets/owl.theme.default.css" rel="stylesheet"/>
     <link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css" />
     <link href="vendor/animate/animate.min.css" rel="stylesheet" />
-    <link href="vendor/lightbox/css/lightbox.min.css" rel="stylesheet" />
+    <!-- <link href="vendor/lightbox/css/lightbox.min.css" rel="stylesheet" /> -->
     <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
     <title>PigeonBolt</title>
 </head>
@@ -32,14 +32,14 @@
     <script src="vendor/easing/easing.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
     <script src="vendor/owlcarousel/owl.carousel.min.js"></script>
-    <script src="vendor/isotope/isotope.pkgd.min.js"></script>
+    <!-- <script src="vendor/isotope/isotope.pkgd.min.js"></script>
     <script src="vendor/lightbox/js/lightbox.min.js"></script>
-    <script src="vendor/superfish/hoverIntent.js"></script>
+    <script src="vendor/superfish/hoverIntent.js"></script> -->
     <script src="vendor/wow/wow.min.js"></script>
-    <script src="vendor/waypoints/waypoints.min.js"></script>
+    <!-- <script src="vendor/waypoints/waypoints.min.js"></script>
     <script src="vendor/counterup/counterup.min.js"></script>
     <script src="vendor/superfish/superfish.min.js"></script>
-    <script src="vendor/touchSwipe/jquery.touchSwipe.min.js"></script>
+    <script src="vendor/touchSwipe/jquery.touchSwipe.min.js"></script> -->
 
 
     <script src="js/main.js"></script>
