--- a/public/index.html
+++ b/public/index.html
@@ -1,31 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="PigeonBolt is a service which provides online restaurant and shop management services, online fleet management and many more!" />
+    <meta
+      name="description"
+      content="PigeonUltra™ is a service which provides online restaurant and shop management services, online fleet management and many more!"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700;800&family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet" />    <link href="vendor/owlcarousel/assets/owl.carousel.css" rel="stylesheet"/>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,600;0,700;1,600&display=swap" rel="stylesheet">
-    <link href="vendor/owlcarousel/assets/owl.theme.default.css" rel="stylesheet"/>
-    <link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700;800&family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
+    <link href="vendor/owlcarousel/assets/owl.carousel.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,600;0,700;1,600&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="vendor/owlcarousel/assets/owl.theme.default.css"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="vendor/font-awesome/css/font-awesome.min.css"
+    />
     <link href="vendor/animate/animate.min.css" rel="stylesheet" />
     <!-- <link href="vendor/lightbox/css/lightbox.min.css" rel="stylesheet" /> -->
-    <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
-    <title>PigeonBolt</title>
-</head>
+    <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css" />
+    <title>PigeonUltra™</title>
+  </head>
 
-<body>
+  <body>
     <div id="root"></div>
     <script src="vendor/jquery/jquery.min.js" type="text/javascript"></script>
     <!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script> -->
     <!-- <script src="vendor/jquery/jquery-migrate.min.js" type="text/javascript"></script> -->
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" ></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.iconify.design/1/1.0.6/iconify.min.js"></script>
@@ -41,9 +56,7 @@
     <script src="vendor/superfish/superfish.min.js"></script>
     <script src="vendor/touchSwipe/jquery.touchSwipe.min.js"></script> -->
 
-
     <script src="js/main.js"></script>
     <script src="js/custom-carousel.js"></script>
-</body>
-
+  </body>
 </html>
