--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,9 @@
   </head>
 
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <div>hello</div>
+    </div>
     <script src="vendor/jquery/jquery.min.js" type="text/javascript"></script>
     <!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script> -->
     <!-- <script src="vendor/jquery/jquery-migrate.min.js" type="text/javascript"></script> -->
